--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,6 +7,21 @@
     "Projects": "Projets",
     "Disciplines": "Liste des matières",
     "Careers": "Débouchés",
-    "Testimonies": "Témoignages"
+    "Testimonies": "Témoignages",
+    "About SIGL" : "À Propos de SIGL",
+    "AboutText":
+    "Les entreprises ont à développer des systèmes d'informations et des logiciels complexes dont les qualités principales sont la capacité à évoluer, la fiabilité et la performance. Les besoins des entreprises évoluent toujours plus rapidement avec l'apparition de nouveaux acteurs et des modèles économiques disruptifs soutenus par la promesse de nouvelles technologies hyper connectées et toujours moins chères à utiliser. Il faut donc aller plus vite pour transformer l'existant et pour créer les nouveaux services métiers d'aujourd'hui et de demain : être totalement présent sur Internet, s'interconnecter avec tous les systèmes d'information de l'entreprise et à un écosystème toujours plus vaste, proposer de nouveaux e-services en temps réel, mieux connaître ses clients",
+    "ModulesIntro" : 
+    "Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun une partie de la culture et des connaissances requises pour construire les technologies de demain.",
+    "M&A" : "Mobilité et Applications",
+    "M&AText" : "Découvrir et appréhender les nouveaux challenges du logiciel afin de s'intégrer dans des contraintes de mobilité toujours plus grandes.",
+    "C&A" : "Cloud et Architecture",
+    "C&AText" : "Comprendre le mode de construction et le fonctionnement des systèmes d'information ainsi que son architecture technique. Découverte des technologies Cloud et du Big Data.",
+    "L&M" : "Leadership et Management",
+    "L&MText" : "Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT et de former les managers de demain.",
+    "D&T" : "Digitalisation et Transformation",
+    "D&TText" : "Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences."
+
+
 
   }
