--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -20,7 +20,10 @@
     "L&M" : "Leadership et Management",
     "L&MText" : "Maitriser les nouveaux modèles économiques afin de répondre aux nouveaux besoins de la gouvernance IT et de former les managers de demain.",
     "D&T" : "Digitalisation et Transformation",
-    "D&TText" : "Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences."
+    "D&TText" : "Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.",
+    "Proj" : "Nos Projets",
+    "ARCL" : "Architecture Cloud",
+    "ARCLText" : 
 
 
 
