Update Project's page

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -23,7 +23,7 @@
     "D&TText" : "Comprendre et et rendre viable la transformation digitale des entreprises ainsi que les nouveaux leviers d'innovation rendus possibles par l'IT et ses conséquences.",
     "Proj" : "Nos Projets",
     "ARCL" : "Architecture Cloud",
-    "ARCLText" : ""
+    "ARCLText" : "Créer un cloud hybride avec AWS/Azure et la suite logiciel opensource Openstack managé par un CMP"
 
 
 
