Add Contact and Social Network in navbar and change title of the website

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
     "Projects": "Projects",
     "Disciplines": "Disciplines",
     "Careers": "Career Oportunities",
+    "Social": "Contact & Network",
     "Testimonies": "Testimonies",
     "À Propos de SIGL" : "About SIGL",
     "AboutText" :
