--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,6 +7,7 @@
     "Projects": "Projets",
     "Disciplines": "Liste des matières",
     "Careers": "Débouchés",
+    "Social": "Contact & Réseau",
     "Testimonies": "Témoignages",
     "About SIGL" : "À Propos de SIGL",
     "AboutText":
