add multi langue texte to courses list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,5 +24,25 @@
     "D&TText" : "Undestanding and make Digital Transformation viable for companies as well as the new innovation levers provided by the IT",
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
-    "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as Paas Services such as AWS or Microsoft Azure"
+    "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as Paas Services such as AWS or Microsoft Azure",
+    "LM_OPCO" : "TODO2",
+    "LM_AMOA" : "TODO",
+    "LM_OPDI" : "TODO",
+    "LM_COIN" : "TODO",
+    "LM_URSI" : "TODO",
+    "LM_VIT1" : "TODO",
+    "LM_ARCL" : "TODO",
+    "LM_SOAR" : "TODO",
+    "LM_ARLA" : "TODO",
+    "LM_MEPA" : "TODO",
+    "LM_ACOO" : "TODO",
+    "LM_NLPF" : "TODO",
+    "LM_DEVO" : "TODO",
+    "LM_ACCC" : "TODO",
+    "LM_INNO" : "TODO",
+    "LM_PMDE" : "TODO",
+    "LM_DIGI" : "TODO",
+    "LM_VIT2" : "TODO",
+    "LM_METH" : "TODO",
+    "LM_PERS" : "TODO"
   }
