--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,24 +25,24 @@
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
     "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as Paas Services such as AWS or Microsoft Azure",
-    "LM_OPCO" : "TODO2",
-    "LM_AMOA" : "TODO",
-    "LM_OPDI" : "TODO",
-    "LM_COIN" : "TODO",
-    "LM_URSI" : "TODO",
-    "LM_VIT1" : "TODO",
-    "LM_ARCL" : "TODO",
-    "LM_SOAR" : "TODO",
-    "LM_ARLA" : "TODO",
-    "LM_MEPA" : "TODO",
-    "LM_ACOO" : "TODO",
-    "LM_NLPF" : "TODO",
-    "LM_DEVO" : "TODO",
-    "LM_ACCC" : "TODO",
-    "LM_INNO" : "TODO",
-    "LM_PMDE" : "TODO",
-    "LM_DIGI" : "TODO",
-    "LM_VIT2" : "TODO",
-    "LM_METH" : "TODO",
-    "LM_PERS" : "TODO"
+    "LM_OPCO" : "OPCO : Organisation Personnelle et Communication",
+    "LM_AMOA" : "AMOA : Maitrise d’ouvrage des SI",
+    "LM_OPDI" : "OPDI : Organisation et pilotage d’une DSI",
+    "LM_COIN" : "COIN : Communication Interpersonnelle",
+    "LM_URSI" : "URSI : Urbanisation des SI",
+    "LM_VIT1" : "VIT1 : Virtualisation & Transformation ITs",
+    "LM_ARCL" : "ARCL : Architecture Cloud",
+    "LM_SOAR" : "SOAR : Solution Architecture ( + TD infrastructures & Projet PMS)",
+    "LM_ARLA" : "ARLA : Architecture Logicielle",
+    "LM_MEPA" : "MEPA : Mise en pratique agile",
+    "LM_ACOO" : "ACOO : Analyse et Conception Orienté Objet",
+    "LM_NLPF" : "NLPF : Nouveaux Langages de Prog. et Framework",
+    "LM_DEVO" : "DEVO : DevOps",
+    "LM_ACCC" : "ACCC : Accompagnement au Changement",
+    "LM_INNO" : "INNO : Innovation",
+    "LM_PMDE" : "PMDE : Projet mode d’emploi",
+    "LM_DIGI" : "DIGI : Digitalisation",
+    "LM_VIT2" : "VIT2 : Virtualisation & Transformation IT",
+    "LM_METH" : "METH : Méthodes",
+    "LM_PERS" : "PERS : Perspectives IT"
   }
