Add full english course name

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,24 +25,24 @@
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
     "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as Paas Services such as AWS or Microsoft Azure",
-    "LM_OPCO" : "TODO2",
-    "LM_AMOA" : "TODO",
-    "LM_OPDI" : "TODO",
-    "LM_COIN" : "TODO",
-    "LM_URSI" : "TODO",
-    "LM_VIT1" : "TODO",
-    "LM_ARCL" : "TODO",
-    "LM_SOAR" : "TODO",
-    "LM_ARLA" : "TODO",
-    "LM_MEPA" : "TODO",
-    "LM_ACOO" : "TODO",
-    "LM_NLPF" : "TODO",
-    "LM_DEVO" : "TODO",
-    "LM_ACCC" : "TODO",
-    "LM_INNO" : "TODO",
-    "LM_PMDE" : "TODO",
-    "LM_DIGI" : "TODO",
-    "LM_VIT2" : "TODO",
-    "LM_METH" : "TODO",
-    "LM_PERS" : "TODO"
+    "LM_OPCO" : "OPCO : Personnal Organization and Communication",
+    "LM_AMOA" : "AMOA : Information System Project Maangement",
+    "LM_OPDI" : "OPDI : Information Systems Steering and Organization",
+    "LM_COIN" : "COIN : Interpersonnal communication",
+    "LM_URSI" : "URSI : Information Systems Urbanization",
+    "LM_VIT1" : "VIRT : Virtualization & IT Transformation",
+    "LM_ARCL" : "ARCL : Cloud Architecture",
+    "LM_SOAR" : "SOAR : Solution Architecture",
+    "LM_ARLA" : "ARLA : Software Architecture",
+    "LM_MEPA" : "MEPA : Agile Methods Practice",
+    "LM_ACOO" : "ACOO : Object-Oriented Analysis and Design",
+    "LM_NLPF" : "NLPF : New Functionnal Programming Languages",
+    "LM_DEVO" : "DEVO : DevOps",
+    "LM_ACCC" : "ACCC : Management of Change",
+    "LM_INNO" : "INNO : Innovation",
+    "LM_PMDE" : "PMDE : Project : Operating Instructions",
+    "LM_DIGI" : "DIGI : Digitalization",
+    "LM_VIT2" : "VIT2 : Virtualization and IT Transformation",
+    "LM_METH" : "METH : Methods",
+    "LM_PERS" : "PERS : IT Perspectives"
   }
