--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -12,6 +12,7 @@
     "About SIGL" : "À Propos de SIGL",
     "AboutText":
     "Les entreprises ont à développer des systèmes d'informations et des logiciels complexes dont les qualités principales sont la capacité à évoluer, la fiabilité et la performance. Les besoins des entreprises évoluent toujours plus rapidement avec l'apparition de nouveaux acteurs et des modèles économiques disruptifs soutenus par la promesse de nouvelles technologies hyper connectées et toujours moins chères à utiliser. Il faut donc aller plus vite pour transformer l'existant et pour créer les nouveaux services métiers d'aujourd'hui et de demain : être totalement présent sur Internet, s'interconnecter avec tous les systèmes d'information de l'entreprise et à un écosystème toujours plus vaste, proposer de nouveaux e-services en temps réel, mieux connaître ses clients",
+    "Matières"  : "Liste des matières",
     "ModulesIntro" : 
     "Afin de préparer au mieux les étudiants au monde de l'entreprise, la majeure SIGL s'articule autour de 4 modules majeurs apportant chacun une partie de la culture et des connaissances requises pour construire les technologies de demain.",
     "M&A" : "Mobilité et Applications",
@@ -81,7 +82,31 @@
     "LM_PERS_text" : "<p>Comprendre et maîtriser l’évolution et les tendances du marché informatique. </p> <p>Répondre à une problématique d’Enterprise par la mise en oeuvre d’une solution à base d’IoT</p> <p>Développer des compétences en synthèse, analyse et innovation</p>",
     "githubIssue" : "Reporter un bug",
 
-    "DEB" : "Les débouchés"
+    "DEB" : "Les débouchés",
+
+    "Tech" : "Technique",
+    "Dev" : "Développeur",
+    "Expert" : "Expert Spécialisé",
+    "ConsTech" : "Consultant Technique",
+    "IngSyst" : "Ingénieur Système",
+    "Chercheur" : "Chercheur",
+
+    "Com" : "Commercial",
+    "IngAffaires" : "Ingénieur d'affaires",
+    "RespCompte" : "Responsable de comptes",
+    "AvV" : "Ingénieur Avant-Vente",
+
+    "Orga" : "Organisationnel",
+    "Dir" : "Directeur Informatique (DI, DSI, CIO)",
+    "DirProd" : "Directeur de production",
+    "ConsOrga" : "Consultant Organisationnel",
+
+    "Plur" : "Pluriel",
+    "Archi" : "Architecte Logiciel",
+    "ChefProj" : "Chef de projet",
+    "IngQA" : "Ingénieur Méthodes/Qualité",
+    "AMOA" : "Assistance Maîtrise d'ouvrage",
+    "BizDev" : "Business Developper"
 
    
 
