Add social networks translations and fix icons for projects in responsive/desktop

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -88,5 +88,7 @@
     "ChefProj" : "Project Leader",
     "IngQA" : "QA Engineer",
     "AMOA" : "Assistance to Mastery of Work",
-    "BizDev" : "Business Developper"
+    "BizDev" : "Business Developper",
+    "Facebook" : "Join Us On Facebook",
+    "Contact" : "Contact Us"
   }
