--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -106,7 +106,10 @@
     "ChefProj" : "Chef de projet",
     "IngQA" : "Ingénieur Méthodes/Qualité",
     "AMOA" : "Assistance Maîtrise d'ouvrage",
-    "BizDev" : "Business Developper"
+    "BizDev" : "Business Developper",
+
+    "Facebook" : "Nous rejoindre sur Facebook",
+    "Contact" : "Nous contacter"
 
    
 
