--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
     "SIGL": "SIGL",
-    "Slogan": "The speciality dedicate to the information system and software engineering",
+    "Slogan": "The speciality dedicated to information systems and software engineering",
     "Home": "Home",
     "About": "About",
     "Modules": "Modules",
@@ -25,7 +25,7 @@
     "D&TText" : "Undestanding and make Digital Transformation viable for companies as well as the new innovation levers provided by the IT",
     "Proj" : "Our projects",
     "ARCL" : "Cloud Architecture",
-    "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as Paas Services such as AWS or Microsoft Azure",
+    "ARCLText" : "Creation of an hybrid cloud using Openstack technologies as well as PaaS Services such as AWS or Microsoft Azure",
     "VIRT" : "Virtualization",
     "VIRTText" : "Business case realization based on cost lines and savings levers",
     "IOTText" : "Creation of an IoT Object and realize Marketing processes (Business Case, Commercial) as well as the realization",
@@ -34,7 +34,7 @@
     "URSIText" : "Creation of an Information System simulating a Retail company's behavior",
     "WTText" : "Two-sided project realized with modern web technologies (Free Choice) : ROR, Javascript, Golang...",
     "PMS" : "Multi-specialty Project",
-    "PMSText" : "SIGL, Security and Network students work together in order to propose a transformation solution",
+    "PMSText" : "SIGL, Security and Network students work together in order to propose a transformation solution in a business context",
     "MEPA" : "Agile Methodology",
     "MEPAText" : "Scrum-Compliant Project realized in group of 4",
     "ARCHText" : "Class Project in order to understand all possible aspects of IS Arcitecture",
@@ -67,8 +67,8 @@
         "LM_OPCO_text2" : "Being able to reinforce professionnal efficiency using a better communication",
         "LM_OPCO_text3" : "Being able to manage its own professionnal project",
        
-        "LM_AMOA_text1" : "Apprehend and understand Information System from a company's POV",
-        "LM_AMOA_text2" : "Identify roles, missions and positionning of Prject Management",
+        "LM_AMOA_text1" : "Apprehend and understand Information System from a company's Point of view",
+        "LM_AMOA_text2" : "Identify roles, missions and positionning of Project Management",
         "LM_AMOA_text3" : "Define responsibilities between Project Management's business units",
         "LM_AMOA_text4" : "Being Able to conduct an organizational study for IT products / services",
        
@@ -92,14 +92,14 @@
         "LM_VIT1_text3" : "Practice with study cases about virtualization",
         "LM_VIT1_text4" : "Understand key notions of virtualization",
        
-        "LM_ARCL_text1" : "Validate skills acquisition by building a private cloud and a cloud-based application",
+        "LM_ARCL_text1" : "Validate skills acquisition by building an hybrid cloud and a cloud-based application",
         "LM_ARCL_text2" : "Understand key notions of Cloud Computing",
         "LM_ARCL_text3" : "Test an open-source Cloud solution",
     
         "LM_SOAR_text1" : "Understand and practice the implementation of a Solution Architecture",
         "LM_SOAR_text2" : "Understand key components of infrastructure",
         
-        "LM_ARLA_text" : "",
+        "LM_ARLA_text" : "Acquire key concepts of Software Architecture",
         
         "LM_MEPA_text1" : "General concepts of development productivity's issues",
         "LM_MEPA_text2" : "Experiment tools associated with Agile's planning and development methods",
@@ -112,7 +112,7 @@
         
         "LM_NLPF_text" : "Understand culture of new programmation languages and frameworks",
         
-        "LM_DEVO_text1" : "Understand Devops added value against classical development methods",
+        "LM_DEVO_text1" : "Understand DevOps added value against classical development methods",
         "LM_DEVO_text2" : "Understand the DevOps transformation within a project",
     
         "LM_ACCC_text1" : "Understad what's at stake during a transformation",
@@ -125,20 +125,20 @@
         "LM_PMDE_text2" : "Identify concrete solutions",
         "LM_PMDE_text3" : "Deliver counsel mission",
     
-        "LM_DIGI_text1" : "Autour de mon expérience dans le marché de l'art avec le développement des ventes Live en direct sur Internet. Je montre comment la digitalisation d'une industrie pré-existante dans le monde physique, en l’occurrence le marché de l'art et les ventes aux enchères publiques, est un mix entre innovation et transformation.",
-        "LM_DIGI_text2" : "J'aborde le sujet sous différents angles. Celui du média Interencheres et celui des commissaires-priseurs. Je tisse des parallèles avec le ecommerce et les industries de la distribution et du commerce.",
-        "LM_DIGI_text3" : "Un cours qui matérialise la différence entre innovation et transformation, qui propose une approche par phase de la digitalisation d'une industrie pré-existante au web. Qui esquisse des pistes pour réussir la conduite du changement. Qui montre la nécessité de procéder d'une vision à long-terme sans pour autant traîner en chemin quand les pure-players de l'Internet sont à l’affût",
+        "LM_DIGI_text1" : "Through a case study of Art Market's digitalization, acquire key notions of how innovation and tranformation are keys for business purposes",
+        "LM_DIGI_text2" : "Approach the matter on several angles, based on comparisons with reail and media industry",
+        "LM_DIGI_text3" : "Learn the main differences between innovation and transformation",
         
-        "LM_VIT2_text1" : "Discuss financial and technological model based around cloud computing",
-        "LM_VIT2_text2" : "Apprehend unsollicited action with a client and elaborate a Business Case",
+        "LM_VIT2_text1" : "Discuss financial and technological models based around cloud computing",
+        "LM_VIT2_text2" : "Apprehend unsollicited actions with a client and elaborate a Business Case",
         "LM_VIT2_text3" : "Understand key notions of cloud transformation",
     
-        "LM_METH_text1" : "Learning development methods",
-        "LM_METH_text2" : "Formation of conceptual models and there methods",
+        "LM_METH_text1" : "Learn and practice several development and project management methods",
+        "LM_METH_text2" : "Discover conceptual models and their applications in a business context",
         "LM_METH_text3" : "Take part in simulations",
     
         "LM_PERS_text1" : "Undestand and control the evolutions of the IT market.",
-        "LM_PERS_text2" : "Solve an enterprise problem by implementing an IoT solution", 
+        "LM_PERS_text2" : "Solve an enterprise problem by designing and creating an IoT solution", 
         "LM_PERS_text3" : "Develop synthesis, analysis and innovation skills",
 
 
